# PSToolbox

./: .cproject  .gitignore  CMakeLists.txt  CheckValve.cpp  CheckValve.h  Connector.cpp  Connector.h  Doxyfile  EpanetReader.cpp  EpanetReader.h  IdealGas.cpp  IdealGas.h  LWP.cpp  LWP.h  Nyiregyhaza.h  PRV.h  PSToolboxBaseEdge.cpp  PSToolboxBaseEdge.h  PSToolboxPlotter.cpp  PSToolboxPlotter.h  PSToolboxRunner.cpp  PSToolboxRunner.h  Pump.cpp  Pump.h  README.md  Reservoir.cpp  Reservoir.h  SCP.cpp  SCP.h  SurgeChamber.cpp  SurgeChamber.h  Tank.cpp  Tank.h  Valve.cpp  Valve.h  makefile  makefile_backup_20250406  makefile_win_lyly.mk  makefile_win_lyly.mk.backup.mk  my_tools.cpp  (+1 more)
Matlab_tools/: load_Damper_data.m  load_LWP_data.m  load_SCP_data.m  load_Valve_data.m  load_reservoir_data.m  plot_LWP_data.m  plot_reservoir_data.m  plot_test16.m  plot_valve_data.m
examples/: Makefile  a.out  dummy_v1.inp  epanet_test.inp  ipar_v2_without_pump_1.inp  nyiregyhaza.cpp  output.txt  plot_time_steps.m  test11_runner.cpp  test11_runner_Csaba.cpp  test11_runner_dani.cpp  test12_Pump.cpp  test12_epanet_reader.cpp  test13_Pump_and_CheckValve.cpp  test14_Pump_non-reflecting_BC.cpp  test15_epanet.cpp  test16_3pipes_with_ideal_gas.cpp  test1_reservoir_with_ideal_gas.cpp  test2_reservoir_valve_with_liquid.cpp  test3_reservoir_pipe_with_ideal_gas.cpp  test4_reservoir_valve_with_ideal_gas.cpp  test5_2pipes_with_liquid.cpp  test6_3pipes_with_liquid.cpp
examples_win/: test1_reservoir_with_ideal_gas.cpp
html/: _bio_connector_8cpp.html  _bio_connector_8h.html  _bio_connector_8h_source.html  _bio_pipe_8cpp.html  _bio_pipe_8h.html  _bio_pipe_8h_source.html  _check_valve_8cpp.html  _check_valve_8h.html  _check_valve_8h_source.html  _connector_8cpp.html  _connector_8h.html  _connector_8h_source.html  _cool_prop_gas_8cpp.html  _cool_prop_gas_8h.html  _cool_prop_gas_8h_source.html  _cool_prop_h_a_8cpp.html  _cool_prop_h_a_8h.html  _cool_prop_h_a_8h_source.html  _damper_8cpp.html  _damper_8h.html  _damper_8h_source.html  _epanet_reader_8cpp.html  _epanet_reader_8h.html  _epanet_reader_8h_source.html  _frozen_mixture_liquid_gas_8cpp.html  _frozen_mixture_liquid_gas_8h.html  _frozen_mixture_liquid_gas_8h_source.html  _gas_8cpp.html  _gas_8cpp_source.html  _gas_8h.html  _gas_8h_source.html  _ideal_gas_8cpp.html  _ideal_gas_8h.html  _ideal_gas_8h_source.html  _l_w_p_8cpp.html  _l_w_p_8h.html  _l_w_p_8h_source.html  _l_w_p__2___valve___b_ccheck_8m.html  _p_r_v_8cpp.html  _p_r_v_8h.html  (+208 more)
latex/: _bio_connector_8cpp.tex  _bio_connector_8h.tex  _bio_connector_8h_source.tex  _bio_pipe_8cpp.tex  _bio_pipe_8h.tex  _bio_pipe_8h_source.tex  _check_valve_8cpp.tex  _check_valve_8h.tex  _check_valve_8h_source.tex  _connector_8cpp.tex  _connector_8h.tex  _connector_8h_source.tex  _cool_prop_gas_8cpp.tex  _cool_prop_gas_8h.tex  _cool_prop_gas_8h_source.tex  _cool_prop_h_a_8cpp.tex  _cool_prop_h_a_8h.tex  _cool_prop_h_a_8h_source.tex  _damper_8cpp.tex  _damper_8h.tex  _damper_8h_source.tex  _epanet_reader_8cpp.tex  _epanet_reader_8h.tex  _epanet_reader_8h_source.tex  _frozen_mixture_liquid_gas_8cpp.tex  _frozen_mixture_liquid_gas_8h.tex  _frozen_mixture_liquid_gas_8h_source.tex  _gas_8cpp.tex  _gas_8cpp_source.tex  _gas_8h.tex  _gas_8h_source.tex  _ideal_gas_8cpp.tex  _ideal_gas_8h.tex  _ideal_gas_8h_source.tex  _l_w_p_8cpp.tex  _l_w_p_8h.tex  _l_w_p_8h_source.tex  _l_w_p__2___valve___b_ccheck_8m.tex  _p_r_v_8cpp.tex  _p_r_v_8h.tex  (+93 more)
nyiregyhaza/: case1_dummy.cpp  case2_nyiregyhaza.cpp  case3_szivattyu.cpp  dummy_teszt.cpp  dummy_v0.inp  dummy_v01.inp  dummy_v02.inp  dummy_v2.inp  ipar_v2.inp  ipar_v3.inp  ipar_v3_new.inp  ipar_v4.inp  makefile  nyiregyhaza.cpp  verification.inp
src/: BioConnector.cpp  BioConnector.h  BioPipe.cpp  BioPipe.h  (+39 more)
(+92 files in other folders)
